# graphene

./: CMakeLists.txt  macros.h  types.h
geometry/: Bounding_box.h  CMakeLists.txt  Geometry_representation.h  Matrix3x3.h  Matrix4x4.h  Plane.h  Vector.h  aspect_ratio.h  bary_coord.h  distance_point_triangle.cpp  distance_point_triangle.h  point_in_polygon.cpp  point_in_polygon.h
gl/: CMakeLists.txt  Framebuffer.cpp  Framebuffer.h  GL_state.cpp  GL_state.h  Post_processing.cpp  Post_processing.h  Quad.h  Shader.cpp  Shader.h  gl_includes.h  surface_mesh_gl.h
gl/shaders/: cylinder.fs  cylinder.fsh  cylinder.vs  cylinder.vsh  phong.fs  phong.vs  pp_ambientocclusion.fsh  pp_blur.fsh  pp_final.fsh  pp_linearize_z.fsh  pp_ortho.vsh  sphere.fs  sphere.fsh  sphere.vs  sphere.vsh
qt/: About_graphene_dialog.ui  CMakeLists.txt  Main_window.cpp  Main_window.h  Main_window.qrc  Main_window.ui  QGL_viewer_widget.cpp  QGL_viewer_widget.h  Qdebug_stream.h  events.h  graphene.cpp
qt/plugins/: CMakeLists.txt
qt/plugins/interfaces/: IO_plugin_interface.h  Keyboard_plugin_interface.h  Manipulation_plugin_interface.h  Mouse_plugin_interface.h  Plugin_interface.h
qt/plugins/point_set_io_plugin/: CMakeLists.txt  Point_set_io_plugin.cpp  Point_set_io_plugin.h
qt/plugins/povray_plugin/: CMakeLists.txt  Helper_functions.h  Node_to_Povray.cpp  Povray_plugin.cpp  Povray_plugin.h  Povray_plugin_widget.cpp  Povray_plugin_widget.h  Scene_graph_converter.cpp  Scene_graph_converter.h
qt/plugins/scene_graph_plugin/: CMakeLists.txt  Knot_node_widget.cpp  Knot_node_widget.h  Molecule_node_widget.cpp  Molecule_node_widget.h  Node_widget.cpp  Node_widget.h  Point_set_node_widget.cpp  Point_set_node_widget.h  Scene_graph_plugin.cpp  Scene_graph_plugin.h  Scene_graph_plugin_widget.cpp  Scene_graph_plugin_widget.h  Surface_mesh_node_widget.cpp  Surface_mesh_node_widget.h
qt/plugins/selection_plugin/: CMakeLists.txt  Selection_plugin.cpp  Selection_plugin.h  Selection_plugin_widget.cpp  Selection_plugin_widget.h
scene_graph/: Base_node.cpp  Base_node.h  CMakeLists.txt  CMakeLists.txt~  Lasso_selection_node.cpp  Lasso_selection_node.h  Object_node.cpp  Object_node.h  Operations.h  Scene_graph.cpp  Scene_graph.h
surface_mesh/: CMakeLists.txt
surface_mesh/algorithms/: CMakeLists.txt  CMakeLists.txt~
surface_mesh/algorithms/remeshing/: CMakeLists.txt  CMakeLists.txt~  Remesher.cpp  Remesher.h
surface_mesh/algorithms/subdivision/: CMakeLists.txt  adapt_subdivision.h  catmull_clark_subdivision.cpp  catmull_clark_subdivision.h  feature extension.cpp  feature extension.h  line_dilate.cpp  line_dilate.h  loop_subdivision.cpp  loop_subdivision.h  sqrt3_subdivision.cpp  sqrt3_subdivision.h
surface_mesh/algorithms/surface_mesh_tools/: CMakeLists.txt  Curvature.cpp  Curvature.h  Triangle_BSP.cpp  Triangle_BSP.h  Triangle_kD_tree.cpp  Triangle_kD_tree.h  diffgeo.cpp  diffgeo.h
surface_mesh/data_structure/: CMakeLists.txt  IO.cpp  IO.h  IO_clr.cpp  IO_fld.cpp  IO_obj.cpp  IO_off.cpp  IO_poly.cpp  IO_stl.cpp  Surface_mesh.cpp  Surface_mesh.h  properties.h
surface_mesh/qt/: CMakeLists.txt  Surface_mesh_plugin_interface.h
surface_mesh/qt/remeshing_plugin/: CMakeLists.txt  Remeshing_plugin.cpp  Remeshing_plugin.h  Remeshing_plugin.ui
surface_mesh/qt/subdivision_plugin/: CMakeLists.txt  Subdivision_plugin.cpp  Subdivision_plugin.h
surface_mesh/qt/surface_mesh_io_plugin/: CMakeLists.txt  Surface_mesh_io_plugin.cpp  Surface_mesh_io_plugin.h
surface_mesh/scene_graph/: CMakeLists.txt  Surface_mesh_node.cpp  Surface_mesh_node.h  mean_curvature_texture.h
utility/: CMakeLists.txt  Color_encoder.cpp  Color_encoder.h  Logger.h  Priority_queue.h  Stop_watch.h
